# elastic

./: .gitignore  Cargo.toml  README.md  WASI_COMPLIANCE_ROADMAP.md  WASI_GETTING_STARTED.md  clock_impl.rs  implementation_log.md  test.txt
crates/crypto-demo/: Cargo.toml
crates/crypto-demo/src/: main.rs
crates/elastic-clock/: Cargo.toml
crates/elastic-clock/src/: clock.rs  lib.rs
crates/elastic-clock/src/common/: mod.rs
crates/elastic-clock/src/linux/: clock.rs  mod.rs
crates/elastic-clock/src/sev/: clock.rs  mod.rs
crates/elastic-clock/tests/: clock_tests.rs
crates/elastic-clock/tests/linux/: clock_tests.rs
crates/elastic-clock/tests/sev/: clock_tests.rs
crates/elastic-crypto/: Cargo.toml
crates/elastic-crypto/src/: aes.rs  crypto.rs  error.rs  lib.rs  wasm.rs
crates/elastic-crypto/src/common/: mod.rs
crates/elastic-crypto/src/linux/: crypto.rs  mod.rs
crates/elastic-crypto/src/sev/: mod.rs
crates/elastic-crypto/tests/: crypto_tests.rs  sev.rs  sevsnp_tests.rs
crates/elastic-crypto/tests/linux/: crypto_tests.rs
crates/elastic-crypto/tests/sev/: crypto_tests.rs
crates/elastic-crypto/tests/wasm/: crypto_tests.rs
crates/elastic-crypto/wit/: crypto.wit
crates/elastic-file/: Cargo.toml
crates/elastic-file/src/: file.rs  lib.rs  wasm.rs
crates/elastic-file/src/common/: mod.rs
crates/elastic-file/src/linux/: file.rs  mod.rs
crates/elastic-file/src/sev/: mod.rs  tests.rs
crates/elastic-file/tests/: file_tests.rs
crates/elastic-file/tests/linux/: file_tests.rs
crates/elastic-tls/: Cargo.toml  README.md
crates/elastic-tls/examples/: simple_client.rs  simple_server.rs  wasm_client.html  wasm_client.rs
crates/elastic-tls/scripts/: generate_test_certs.sh
crates/elastic-tls/src/: cert.rs  conn.rs  lib.rs  wasm.rs
crates/elastic-tls/src/common/: mod.rs
crates/elastic-tls/src/linux/: cert.rs  conn.rs  mod.rs
crates/elastic-tls/src/sev/: accel.rs  mod.rs
crates/elastic-tls/test_data/: ca.crt  ca.key  ca.pem  ca.srl  key.pem  server.crt  server.csr  server.key
crates/elastic-tls/testdata/: server.crt  server.key
crates/elastic-tls/tests/: generate_certs.sh  tls_tests.rs
crates/elastic-tls/tests/certs/: server.crt  server.key
crates/elastic-tls/tests/fixtures/: ca.crt  ca.key  ca.srl  server.crt  server.key
crates/elastic-tls/tests/linux/: tls_tests.rs
crates/elastic-tls/wit/: tls.wit
crates/file-demo/: Cargo.toml
crates/file-demo/src/: main.rs
crates/test_data/: ca.crt  server.crt  server.key
crates/testdata/: server.crt  server.key
crates/wasi-clock/: Cargo.toml
crates/wasi-clock/src/: lib.rs
crates/wasm-file-example/src/: main.rs
demo/crypto-demo/: Cargo.toml  README.md
demo/crypto-demo/src/: main.rs
docs/: HAL_spec_050.docx  docx_to_md.py  implementation_log.md  specs.md
docs/demos/: crypto-demo-script.md
elastic-hal/: Cargo.toml
elastic-hal/src/: clock.rs  main.rs
examples/sev-file-example/: Cargo.toml
examples/sev-file-example/src/: main.rs
examples/wasi-clock-example/: Cargo.toml
examples/wasi-clock-example/src/: main.rs
examples/wasm-clock-example/: Cargo.toml  build.sh
examples/wasm-clock-example/demo/: README.md  demo.py  generate_demo.sh  requirements.txt
examples/wasm-clock-example/src/: lib.rs  main.rs
examples/wasm-crypto-example/: Cargo.toml
examples/wasm-crypto-example/demo/: README.md  demo.py
examples/wasm-crypto-example/src/: lib.rs  main.rs
examples/wasm-file-example/: Cargo.toml
examples/wasm-file-example/src/: main.rs
src/: clock.rs  crypto.rs  file.rs  lib.rs  main.rs
tests/: crypto_tests.rs  file_tests.rs  run_crypto_tests.sh  run_file_tests.sh  run_tests.sh
tests/python/: test_clock.py
tests/wit/: clock.wit  crypto.wit  file.wit
