[workspace]
members = [
    "crates/elastic-clock",
    "crates/elastic-crypto",
    "crates/elastic-file",
    "crates/elastic-tls",
    "examples/wasm-clock-example",
    "examples/wasm-crypto-example",
    "examples/sev-file-example",
    "examples/wasm-file-example"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elastic Security"]
description = "ELASTIC: Extensible Library for Attestation, Security, and Trusted I/O in the Cloud"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
aes-gcm = "0.10"
sev = { version = "6.0", features = ["snp"] } 
