[package]
name = "elastic-hal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hardware Abstraction Layer for ELASTIC project with AMD SEV support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sev = { version = "6.0.0", default-features = false, features = ["sev"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"
