[package]
name = "elastic-clock"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Team"]
description = "Clock implementation for ELASTIC project"

[dependencies]
wit-bindgen = "0.41.0"
thiserror = "1.0"
libc = "0.2"
time = "0.3"
sev = { version = "6.0", default-features = false, features = ["snp"] }  # SEV-SNP support

[dev-dependencies]
anyhow = "1.0"

[[test]]
name = "clock_tests"
path = "tests/clock_tests.rs"

[features]
default = ["linux"]
linux = []
sev = []  # SEV-SNP support using sev crate
