[package]
name = "elastic-crypto"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Team"]
description = "Cryptographic operations implementation for ELASTIC project"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
sev = { version = "6.0", default-features = false, features = ["snp"], optional = true }
sha2 = "0.10"

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.2"
tokio-test = "0.4"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = ["linux"]
linux = []
wasm = []
sevsnp = ["sev"] 