[package]
name = "elastic-crypto"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Team"]
description = "Cryptographic operations implementation for ELASTIC project"

[dependencies]
aes-gcm = "0.10"
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
thiserror = "1.0"
hex = "0.4"
sev = { version = "6.0", default-features = false, features = ["snp"], optional = true }
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"], optional = true }
mio = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
tempfile = "3.2"
wasm-bindgen-test = "0.3"

[features]
default = ["linux"]
linux = ["tokio", "mio"]
wasi = []
sevsnp = ["sev"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"], optional = true } 