[package]
name = "elastic-file"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A file operations library for ELASTIC"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.2"
tokio-test = "0.4"

[features]
default = ["linux"]
linux = []
sev = [] 