[package]
name = "elastic-tls"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "TLS Interface for ELASTIC project"

[dependencies]
wit-bindgen = "0.17"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time", "net"] }
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
webpki-roots = "0.25"
sct = "0.7"

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"
tempfile = "3.8.1"

[features]
default = ["linux"]
linux = []
sev = [] 