[package]
name = "elastic-tls"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Team"]
description = "Secure TLS implementation for ELASTIC project"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.25"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
rcgen = "0.11"

[features]
default = []
sevsnp = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "wasm-bindgen-futures"]

[dev-dependencies]
tokio-test = "0.4"
test-log = { version = "0.2", features = ["trace"] }
rcgen = "0.11" 
