[package]
name = "elastic-tls"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Team"]
description = "Secure TLS implementation for the ELASTIC project"
license = "MIT"
repository = "https://github.com/elastic-project/elastic-tls"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki = "0.22"
webpki-roots = "0.23"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcgen = "0.11"
ring = "0.16"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["WebSocket", "Window", "Document", "HtmlElement", "HtmlButtonElement", "HtmlInputElement", "MessageEvent", "BinaryType"] }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"
tempfile = "3.8"

[features]
default = []
sevsnp = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "console_error_panic_hook", "js-sys", "web-sys"]

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"

[[example]]
name = "wasm_client"
path = "examples/wasm_client.rs"
required-features = ["wasm"] 
