[package]
name = "wasi-clock"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Team"]
description = "WASI-compliant clock implementation using ELASTIC"

[dependencies]
elastic-clock = { path = "../elastic-clock" }
wasi = "0.14.2+wasi-0.2.4"
thiserror = "1.0"

[features]
default = []
sevsnp = ["elastic-clock/sev"]
linux = ["elastic-clock/linux"]
wasi = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi = "0.14.2+wasi-0.2.4" 