[package]
name = "wasm-clock-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "bin"]

[dependencies]
elastic-clock = { path = "../../crates/elastic-clock", default-features = false, features = ["linux"] }

[target.wasm32-wasip1]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]
