[package]
name = "wasm-clock-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_clock_example"
crate-type = ["cdylib"]

[[bin]]
name = "wasm_clock_example"
path = "src/main.rs"

[dependencies]
elastic-clock = { path = "../../crates/elastic-clock", default-features = false, features = ["sev"] }
