[package]
name = "wasm-crypto-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_crypto_example"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "wasm_crypto_example"
path = "src/main.rs"

[dependencies]
elastic-crypto = { path = "../../crates/elastic-crypto", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
rand = { version = "0.8", features = ["getrandom"] }
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi = "0.11" 