[package]
name = "wasm-crypto-example"
version = "0.1.0"
edition = "2021"

[dependencies]
elastic-crypto = { path = "../../crates/elastic-crypto", features = ["wasi", "sevsnp"] }
rand = "0.8"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi = "0.11"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] } 